--- a/src/modules/login/LoginEmail.css
+++ b/src/modules/login/LoginEmail.css
@@ -1,13 +1,16 @@
 /* Container tổng */
 .auth-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-color: #f3f4f6; /* Màu nền xám nhạt */
-    font-family: 'Arial', sans-serif;
-    padding: 1rem;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-image: url("https://cdn.thuvienphapluat.vn/uploads/tintuc/2024/01/17/mau-giay-de-nghi-thanh-lap-cong-ty.jpg");
+  background-size: cover; /* Đảm bảo ảnh phủ toàn bộ */
+  background-position: center; /* Canh giữa ảnh */
+  font-family: 'Arial', sans-serif;
+  padding: 1rem;
+}
+
 
   /* Thẻ card chứa form */
   .auth-card {
@@ -16,6 +19,7 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 400px;
+    height: 43vh;
   }
 
   /* Header chính và phụ */
@@ -30,12 +34,14 @@
     text-align: center;
     color: #555;
     font-size: 0.9rem;
+    margin-top: 20px;
   }
 
   /* Container input */
   .input-container {
     position: relative;
     display: flex;
+    margin: 20px;
     align-items: center;
     border: 1px solid #d1d5db;
     border-radius: 0.375rem;
@@ -131,7 +137,7 @@
 
   /* Khoảng cách */
   .p-6 {
-    padding: 1.5rem;
+    padding: 1.5rem 1.5rem 0 1.5rem;
   }
 
   .space-y-4 > * + * {
